# nasa-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/agent/: chat_stream.py  composer.py  loop.py  models.py  prompts.py  sources.py
app/evals/: faithfulness.py  key_facts.py  report.py  retrieval_metrics.py  routing.py  runner.py
app/ingestion/: chunking.py  db.py  embedder.py  ingest.py  search.py
app/retrieval/: models.py  reranker.py  retriever.py
app/tools/: apod.py  base.py  iss_now.py  jwst_images.py  mars_rover_photos.py  registry.py  search_documents.py
eval/: REVIEW.md  cases.json
eval/results/: 20260709T033031Z_results.json
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AssistantMessageView.tsx  ChatApp.tsx  ChatInputBar.tsx  CitationChip.tsx  CitationText.tsx  ErrorBubble.tsx  MessageList.tsx  RouteBadge.tsx  SourcesList.tsx  UserMessageView.tsx
frontend/src/lib/: chatStream.ts  citations.ts  types.ts
frontend/src/lib/__tests__/: chatStream.test.ts
scripts/: ask.py  chat_client.py  chunk_corpus.py  fetch_corpus.py  ingest.py  run_eval.py  run_tool.py  search_smoke.py
tests/: test_config.py
tests/agent/: conftest.py  test_chat_integration.py  test_chat_stream.py  test_composer.py  test_loop_unit.py  test_routing_integration.py  test_sources.py
tests/evals/: test_faithfulness.py  test_key_facts.py  test_report.py  test_retrieval_metrics.py  test_routing.py  test_run_eval_smoke.py
tests/fixtures/: no_headings.txt  retrieval_sanity.json  routing_cases.json  structured_long.txt
tests/ingestion/: conftest.py  test_chunking.py  test_embedder.py  test_ingest_integration.py  test_ingest_logic.py  test_search_integration.py
tests/retrieval/: test_reranker.py  test_retrieval_integration.py  test_retriever.py
tests/tools/: conftest.py  test_apod.py  test_base.py  test_iss_now.py  test_jwst_images.py  test_mars_rover_photos.py  test_registry.py
