[project]
name = "nasa-rag"
version = "0.1.0"
description = "Agentic RAG over NASA documents with live NASA API tools"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "openai>=1.55",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "beautifulsoup4>=4.12",
    "pypdf>=5.0",
    "tiktoken>=0.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
